objects/ssot__Voucher__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountID__c</fullName>
        <label>Account</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AutogeneratedVoucherCodeText__c</fullName>
        <label>Autogenerated Voucher Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountPercent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaceValueAmount__c</fullName>
        <label>Face Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Voucher Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyBenefitId__c</fullName>
        <label>Loyalty Benefit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyJournalSubtypeId__c</fullName>
        <label>Loyalty Journal Subtype</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyJournalSubtype__c</fullName>
        <label>[DoNotUse]Loyalty Journal Subtype</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyJournalType__c</fullName>
        <label>Loyalty Journal Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramMemberId__c</fullName>
        <label>Loyalty Program Member</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTransactionJournalId__c</fullName>
        <label>Loyalty Transaction Journal</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NotesText__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodStatus__c</fullName>
        <label>Payment Method Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodTypeId__c</fullName>
        <label>Payment Method Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RedeemedValueAmount__c</fullName>
        <label>Redeemed Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RemainingValueAmount__c</fullName>
        <label>Remaining Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UsedDate__c</fullName>
        <label>Used Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VoucherCodeText__c</fullName>
        <label>Voucher Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoucherDefinitionId__c</fullName>
        <label>Voucher Definition</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoucherStatusId__c</fullName>
        <label>Voucher Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoucherStatus__c</fullName>
        <label>[DoNotUse]Voucher Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoucherTypeId__c</fullName>
        <label>Voucher Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoucherType__c</fullName>
        <label>[DoNotUse]Voucher Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Voucher_PromotionId_map_Promotion_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voucher_PromotionId_map_Promotion_Id_N_1</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>Voucher_PromotionId_map_Promotion_Id_N_1</relationshipLabel>
        <relationshipName>Voucher_PromotionId_map_Promotion_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761152541_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_Voucher_AccountID_N_1_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_Voucher_AccountID_N_1_rel</relationshipLabel>
        <relationshipName>rel_1697761152541_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761177332_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual_Id_map_Voucher_PartyId_N__rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Individual_Id_map_Voucher_PartyId_N__rel</relationshipLabel>
        <relationshipName>rel_1697761177332_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761179434_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyBenefit_Id_map_Voucher_Loyalt_rel</label>
        <referenceTo>ssot__LoyaltyBenefit__dlm</referenceTo>
        <relationshipLabel>LoyaltyBenefit_Id_map_Voucher_Loyalt_rel</relationshipLabel>
        <relationshipName>rel_1697761179434_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>